axelor-web/src/main/webapp/css/view.form.css
/* ... */
.nav-select li a:hover {
	background: #d0d0d0;
	transition: background-color 0.3s;
}

.nav-select li a:hover:after {
	border-left-color: #d0d0d0 !important;
	transition: border-left-color 0.3s;
}

.nav-select li.active a {
	color: white;
	background: #0088cc;
	transition: background-color 0.3s;
}

.nav-select li.active a:after {
	border-left-color: #0088cc !important;
	transition: border-left-color 0.3s;
}

.tag-select {
	border: 1px solid #cccccc;
	border-radius: 4px;
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
	transition: border linear .2s, box-shadow linear .2s;
	min-height: 26px;
	height: 100%;
}

.tag-select.picker-input {
	background-color: #fff;
}

.readonly .tag-select {
	border: none;
	box-shadow: none;
}

.tag-select:focus,
.tag-select.focus {
	border-color: rgba(82, 168, 236, 0.8);
	outline: 0;
	outline: thin dotted 9;
	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
	   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
	        box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
}

.ng-invalid > .tag-select:focus,
.ng-invalid > .tag-select.focus {
	border-color: #953B39;
	
	-webkit-box-shadow: 0 0 6px #D59392;
	   -moz-box-shadow: 0 0 6px #D59392;
	        box-shadow: 0 0 6px #D59392;
}

.tag-select ul {
	list-style: none;
	overflow: hidden;
	margin: 0;
	margin-right: 16px;
	padding-bottom: 2px;
}

.tag-select li {
	float: left;
	display: inline-block;
	margin: 3px;
	margin-right: 0;
	margin-bottom: 0;
}

.tag-select span.label {
	display: inline-block;
	margin: 2px;
	margin-right: 0;
}

.tag-select li.tag-item {
	
}

.tag-select li.tag-item i {
	font-size: 10px;
	cursor: pointer;
}

.tag-select .tag-text {

}

.tag-select .tag-link {
	cursor: pointer;
}

.tag-select .tag-link:hover {
	text-decoration: underline;
}

.tag-select li.tag-selector input {
	border: none;
	border-radius: 0 !important;
	box-shadow: none;
	width: 50px;
	min-width: 50px !important;
	margin: 0;
	padding: 0 !important;
	margin-left: 2px;
	margin-top: -1px;
	line-height: 16px;
	height: auto !important;
}

.tag-select-action-menu .tag-select-action a {
	font-style: oblique;
	padding-left: 12px;
}


.multi-object-select {
	
}

.multi-object-select fieldset,
.multi-object-select td {
	padding: 0 !important;
}

.multi-object-select td.select-item {
	padding-right: 4px !important;
}

.form-item-container > .mce-tinymce {
	box-sizing: content-box !important;
}

.form-item-container > .html-display-text {
	padding-top: 4px;
}

.button-item.img-button {
	
	background: #fff !important;
	width: auto !important;
	border: none  !important;
	
	padding: 2px !important;
}

.button-item.img-button:hover img {
	padding: 1px;
	
	-webkit-transform: scale(1.2, 1.2);
	   -moz-transform: scale(1.2, 1.2);
	        transform: scale(1.5, 1.5);
}

.button-item.img-button img {
	margin: 0;
}

.button-item.img-button span {
	display: block;
}

.button-item.icon-only {
	text-decoration: none;
}

/* filter menu */

.filter-menu {

	display: none;
	position: absolute;

	padding: 12px;
	
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
	background: #fff;
	
	border-radius: 4px;
	
	z-index: 1;
}

.filter-menu .filter-list {
	display: table;
}

.filter-menu .filter-list > dl {
	display: table-cell;
	width: 50%;
	padding-right: 40px;
}

.filter-menu .filter-list > dl dd {
	cursor: pointer;
}

.filter-menu .filter-form .links {
	line-height: 20px;
}

.filter-menu .filter-form .links .divider {
	color: #ccc;
	padding: 0 5px;
}

.filter-menu form {
	margin-bottom: 8px;
}

.filter-menu input[type=radio],
.filter-menu input[type=checkbox] {
	margin-top: 3px;
}

